kubernetes-manifests/nodejs-goof-vuln-main/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-goof-vuln-main
  labels:
    demo: roadshow
    repo: demo-apps
