kubernetes-manifests/nodejs-goof-vuln-main/deployment-nodejs-goof-vuln-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-goof-vuln-main
  namespace: nodejs-goof-vuln-main
  labels:
    app: nodejs-goof-vuln-main
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-goof-vuln-main
  template:
    metadata:
      labels:
        app: nodejs-goof-vuln-main
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: nodejs-goof-vuln-main
          image: quay.io/mfoster/nodejs-goof-vuln-main:0.1.0
          ports:
            - containerPort: 3001
              name: http
            - containerPort: 9229
              name: debug
          volumeMounts:
            - name: npm-cache
              mountPath: /tmp/npm-cache
            - name: npm-root-cache
              mountPath: /.npm
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: npm-cache
          emptyDir: {}
        - name: npm-root-cache
          emptyDir: {}
