kubernetes-manifests/nodejs-goof-vuln-main/nodejs-goof-vuln-main.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-goof-vuln-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-goof-vuln-main
  namespace: nodejs-goof-vuln-main
  labels: 
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-goof-vuln-main
  template:
    metadata:
      labels:
        app: nodejs-goof-vuln-main
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: nodejs-goof-vuln-main
          image: quay.io/mfoster/nodejs-goof-vuln-main:0.2.1
          command: ["/bin/bash", "-c", "while true; do sleep 1000; done"]
          stdin: true
          tty: true
