kubernetes-manifests/nodejs-goof-vuln-main/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nodejs-goof-vuln-main
  labels:
    app: mongodb
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      name: mongodb
  type: ClusterIP
