kubernetes-manifests/nodejs-goof-vuln-main/service-nodejs-goof-vuln-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-goof-vuln-main
  namespace: nodejs-goof-vuln-main
  labels:
    app: nodejs-goof-vuln-main
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: nodejs-goof-vuln-main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      name: http
  type: ClusterIP
